<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreenbg"
    tools:context="io.writter.ninaadpai.writter.MainActivity">

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:text="@string/subtitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/landing_icon"
        android:layout_below="@+id/subTitle"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="14sp"
        android:hint="@string/emailhint"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailEdit"
        android:layout_alignStart="@+id/emailEdit"
        android:layout_below="@+id/emailEdit"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:hint="@string/pwdhint"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/gobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEdit"
        android:layout_marginTop="13dp"
        android:text="@string/mainactivitygobtn"
        android:background="#1EA775"
        android:layout_alignRight="@+id/passwordEdit"
        android:layout_alignEnd="@+id/passwordEdit"
        android:layout_alignLeft="@+id/passwordEdit"
        android:layout_alignStart="@+id/passwordEdit" />

</RelativeLayout>
