<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context="io.writter.ninaadpai.writter.SetUpNameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/subTitle"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/setupHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/setuphint"
        android:textColor="@android:color/white"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/firstLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="14sp"
        android:hint="@string/nameHint"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/setupHint"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/chooseTopicsHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:text="@string/chooseTopics"
        android:layout_below="@+id/firstLastName"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/topicRecycler"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_alignEnd="@+id/setupHint"
        android:layout_alignLeft="@+id/setupHint"
        android:layout_alignRight="@+id/setupHint"
        android:layout_alignStart="@+id/setupHint"
        android:layout_below="@+id/chooseTopicsHint"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/topicRecycler"
        android:layout_alignLeft="@+id/topicRecycler"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/topicRecycler"
        android:layout_alignStart="@+id/topicRecycler"
        android:layout_marginBottom="7dp"
        android:background="#1EA775" />

</RelativeLayout>
